[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybedtools"
dynamic = ["version", "maintainers", "license", "classifiers", "readme"]
description='Wrapper around BEDTools for bioinformatics work'
dependencies = [
    "numpy",
    "pysam",
    "pandas"
]

[[tool.setuptools.ext-modules]]
name = "pybedtools.cbedtools"
sources = ["pybedtools/cbedtools.pyx"]

[tool.setuptools.ext-modules.include-dirs]
numpy = "get_include"

[tool.pytest.ini_options]
testpaths = ["pybedtools"]
